force-app/main/default/objects/Agency_Affiliation__c/Agency_Affiliation__c.object-meta.xml
<CustomObject>
    <label>Agency Affiliation</label>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency  Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>