force-app/main/default/objects/Agency_Affiliation__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>3rd Party Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agency  Affiliations</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>